# image-packer-rs

./: .gitignore  Cargo.toml  README.md  build.rs
resources/animations/: Player.toml
src/: cli.rs  definitions.rs  lib.rs  main.rs  packer.rs
