[package]
name = "image-packer"
version = "0.3.0"
edition = "2021"
authors = ["Daniel Becher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
image = "0.24.7"
indicatif = "0.17.7"
clap = {version = "4.4.7", features = ["derive"]}
